Commit toàn bộ thay đổi

--- a/Views/client/share/footer.cshtml
+++ b/Views/client/share/footer.cshtml
@@ -57,7 +57,7 @@
                         <ul class="list-style-three">
                             <li><a href="about.html">About Company</a></li>
                             <li><a href="blog.html">Community Blog</a></li>
-                            <li><a href="contact.html">Jobs and Careers</a></li>
+                            <li><a href="/contact">Liên hệ</a></li>
                             <li><a href="blog.html">latest News Blog</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
