--- a/Views/client/share/header.cshtml
+++ b/Views/client/share/header.cshtml
@@ -36,6 +36,7 @@
                             </li>
                             <li><a href="tour-list">Tour list</a></li>
                             <li><a href="blog">Blog</a></li>
+                            <li><a href="/contact">Liên hệ</a></li>
                         </ul>
                     </div>
 
