--- a/Views/client/blog/ListBlog.cshtml
+++ b/Views/client/blog/ListBlog.cshtml
@@ -103,7 +103,7 @@
                                     </h5>
                                     <ul class="blog-meta">
                                         <li><i class="far fa-calendar-alt"></i> <a href="#">@blogDate</a></li>
-                                        <li><i class="far fa-comments"></i> <a href="#">Comments (0)</a></li>
+                                        @* <li><i class="far fa-comments"></i> <a href="#">Comments (0)</a></li> *@
                                     </ul>
                                     <p>@blog.ShortDescription</p>
                                     <p>Author: @authorName</p>
