--- a/Views/client/share/header.cshtml
+++ b/Views/client/share/header.cshtml
@@ -54,7 +54,7 @@
 
             <!-- Menu Button -->
             @{
-                var isLoggedIn = Context.Session.GetInt32("UserId") != null;
+                var isLoggedIn = Context.Session.GetInt32("UserID") != null;
                 var userName = Context.Session.GetString("UserName") ?? "User";
                 var userAvatar = "/assets/images/blog/comment-author1.jpg"; // Dùng avatar mẫu feedback
             }
